# power_point

./: .clangd  CMakeLists.txt  README.md  Session.vim  a.out  cl.txt  commandlist.txt  compile_commands.json  main.cpp  makefile  out.txt  power.pro
.cache/clangd/index/: add_shape_command.cpp.2CD46EE65198DEC9.idx  add_shape_command.hpp.8CB9D35CD4E862C1.idx  add_slide_command.cpp.637AAA2A5B16AC94.idx  add_slide_command.hpp.125C64DFB54543E4.idx  circle_shape.cpp.FA68C5FFB1E015E2.idx  command.hpp.7A3A7095F33E5AE8.idx  command.hpp.D39E4BAFB1A9933A.idx  command_factory.cpp.113FCBCFED0664D1.idx  command_factory.hpp.AF4A006DDF8D569D.idx  controller.cpp.441848935B423BF1.idx  controller.hpp.EE05998D8957F829.idx  main.cpp.A00FC0BBAB95096C.idx  model.cpp.FB78AE1F443CF792.idx  parser.cpp.10F72A9671AA4E40.idx  parser.hpp.2981124DF17295B5.idx  rect_shape.cpp.0F96DC35C572FB25.idx  shape_factory.cpp.DD6CC9C8C1D11FA6.idx
cli/inc/: command_info.hpp  parser.hpp  type.hpp
cli/inc/factory/: add_item_com.hpp  add_shape_com.hpp  add_shape_command.hpp  add_slide_com.hpp  add_slide_command.hpp  command.hpp  command_factory.hpp  exit_com.hpp  icommand.hpp  remove_item_com.hpp  remove_slide_com.hpp  rendo_com.hpp  run_com.hpp  show_slide_com.hpp  undo_com.hpp
cli/inc/observer/: observer.hpp  subject.hpp
cli/inc/semantic/: add_item_sem.hpp  add_slide_sem.hpp  asem_an.hpp  remove_item_sem.hpp  remove_slide_sem.hpp  rendo_sem.hpp  run_sem.hpp  show_slid_sem.hpp  undo_sem.hpp
cli/src/: parser.cpp
cli/src/factory/: add_item_com.cpp  add_shape_com.cpp  add_shape_command.cpp  add_slide_com.cpp  add_slide_command.cpp  command_factory.cpp  exit_com.cpp  (+6 more)
cli/test/: CMakeLists.txt  main.cpp
controller/inc/: controller.hpp  editor.hpp  icommand_visitor.hpp  qt_wrapper.hpp  vizualize.hpp
controller/src/: controller.cpp  editor.cpp  ostream_wrapper.cpp  qt_wrapper.cpp  vizualize.cpp
core/inc/: controller.hpp
core/src/: controller.cpp
gui/form/: main_form.ui
gui/inc/: add_item_win.hpp  gui_controller.hpp  paint_area.hpp  view.hpp
gui/src/: add_item_win.cpp  gui_controller.cpp  paint_area.cpp  view.cpp
inc/: parser.hpp
model/inc/: item.hpp  model.hpp  slide.hpp
model/src/: item.cpp  model.cpp  slide.cpp
src/: parser.cpp
(+77 files in other folders)
